deploy/kyverno/require-app-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-app-kubernetes-io-name
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - proverjay
      validate:
        message: "Pods should have the app.kubernetes.io/name label."
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
